--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 //    implementation 'com.j256:ormlite:3.0'
     implementation 'com.j256.ormlite:ormlite-android:6.1'
     implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
